2020-04-13  Julien Bect  <julien.bect@centralesupelec.fr>

	Remove some deprecated functions

	* model/@stk_model_gpposterior/get_input_data.m: Remove deprecated function.
	* model/@stk_model_gpposterior/get_output_data.m: Idem.
	* model/@stk_model_gpposterior/get_prior_model.m: Idem.
	* model/prior_struct/@struct/README: Remove no-longer-needed explanation.
	* model/prior_struct/@struct/get_input_data.m: Idem.
	* model/prior_struct/@struct/get_output_data.m: Idem.
	* model/prior_struct/@struct/get_prior_model.m: Idem.
	* admin/octpkg/INDEX: Update index.

2020-04-11  Julien Bect  <julien.bect@centralesupelec.fr>

	Delete unused internal function @stk_kreq_qr/stk_update.m

	* core/@stk_kreq_qr/stk_update.m: Delete unused internal function.
	* model/@stk_model_gpposterior/stk_model_update.m: Remove comment.
	* admin/octpkg/INDEX: Update index.

2020-02-20  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_example_doe05.m: Fix comments

	* examples/02_design_of_experiments/stk_example_doe05.m: Fix comments.

	stk_example_doe05.m: Various minor improvements

	* examples/02_design_of_experiments/stk_example_doe05.m: Various
	minor improvements.

2020-02-19  Julien Bect  <julien.bect@centralesupelec.fr>

	Remove deprecated CG#12 marks

	* examples/02_design_of_experiments/stk_example_doe03.m: Remove
	deprecated CG#12 mark.
	* examples/02_design_of_experiments/stk_example_doe05.m: Idem.

	stk_example_doe05.m: Fix figure title

	* examples/02_design_of_experiments/stk_example_doe05.m: Fix
	figure title to reflect the actual name of the example.

	* examples/02_design_of_experiments/stk_example_doe05.m: Fix the
	final display for the case where the algorithm stops prematurely,
	and add a warning too.

	stk_example_doe05.m: Make it possible to use the exact KG

	* examples/02_design_of_experiments/stk_example_doe05.m: Make it
	possible to use the exact KG criterion instead of Scott's
	approximation (previously, only the latter was proposed).
