@@ -58,7 +58,7 @@ NOISE_VARIANCE = 2 ^ 2;
 GRID_SIZE = 200;  % Number of points in the grid
 xg = stk_sampling_regulargrid (GRID_SIZE, DIM, BOX);
 
-% Give names explicit names to the points of the grid
+% Give explicit names to the points of the grid
 xg.rownames = arrayfun ...
     (@(i)(sprintf ('xg(%03d)', i)), 1:GRID_SIZE, 'UniformOutput', false)';
 
@@ -99,7 +99,7 @@ end
 % Construction of the initial design
 x0 = stk_sampling_regulargrid (N0, DIM, BOX);
 
-% Give names explicit names to the points in the initial design
+% Give explicit names to the points in the initial design
 x0.rownames = arrayfun ...
     (@(i)(sprintf ('init%03d', i)), 1:N0, 'UniformOutput', false)';
 
